--- a/examples/devtest/razorcharts/index.html
+++ b/examples/devtest/razorcharts/index.html
@@ -20,17 +20,17 @@
 		require(["razorcharts2/core/rcmain"], function (Chart) {
             var chart = new Chart();
             chart.config({
-                type: 'linear',
+                type: 'bar',
                 // min: 0,
                 // max: 100,
                 // value: 40
                 labels: ['abcfsdfsdfsdfsdfsdfsdf', 'deffsdfsdfsfdsdfs', 'hij', 'klmsfsdfsdfsfsf', 'nop'],
                 // dualAxis: true,
-                stacked: true,
+                // stacked: true,
                 xAxis: {
-                    minValue: 10,
-                    maxValue: 60,
-                    numTicks: 5
+                    // minValue: 10,
+                    // maxValue: 60,
+                    // numTicks: 5
                 },
                 series: [
                     {
