Fixed the eventManager in linearchart

--- a/examples/devtest/razorcharts/index.html
+++ b/examples/devtest/razorcharts/index.html
@@ -20,7 +20,7 @@
 		require(["razorcharts2/core/rcmain"], function (Chart) {
             var chart = new Chart();
             chart.config({
-                type: 'bar',
+                type: 'linear',
                 // min: 0,
                 // max: 100,
                 // value: 40
